ubiquiti/usip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: uisp
  name: uisp
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: default-skipverify@kubernetescrd
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 443
      targetPort: 443
      name: https
    - port: 2055
      targetPort: 2055
      protocol: UDP
      name: netflow
  selector:
    app: uisp
  type: ClusterIP
